test/error/iface/err5.rzy
component
  Err5
    slot
      funcA();

    implementation elementary

  end

